[package]
name = "axfr-notify"
description = "Recieves NOTIFY requests from RabbitMQ and notifies the secondary server"
authors = ["Q <q@as207960.net>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-proto = { version = "0.22", features = [] }
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4", features = ["cargo", "env"] }
amiquip = "0.4"
tonic = "0.9"
prost = "0.11"
rand = "0.8"

[build-dependencies]
tonic-build = { version = "0.9" }