[package]
name = "dns-update"
description = "AS207960 Rust DNS Update"
version = "0.1.0"
authors = ["Q <q@as207960.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
trust-dns-proto = "0.23"
trust-dns-client = "0.23"
tokio = { version = "1.19", features = ["macros", "io-util", "rt", "rt-multi-thread", "net", "sync"] }
log = "0.4"
pretty_env_logger = "0.5"
prost = "0.14"
clap = { version = "4.5", features = ["cargo", "env"] }
futures-util = "0.3"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[lib]
name = "dns_cache"
path = "src/lib.rs"

[[bin]]
name = "update"
path = "src/main.rs"
