[package]
name = "dnssec-signer"
version = "0.1.0"
edition = "2021"
authors = ["Q <q@as207960.net>"]

[dependencies]
trust-dns-proto = { version = "0.22", features = ["dnssec"] }
trust-dns-client = "0.22"
log = "0.4"
pretty_env_logger = "0.5.0"
base64 = "0.22"
chrono = "0.4"
hex = "0.4"
data-encoding = "2"
openssl = "0.10.59"
itertools = "0.12"
base32 = "0.4.0"
clap = { version = "4.4.8", features = ["cargo", "env"] }
lapin = "2.3.1"
tokio = { version = "1.34.0", features = ["net", "macros", "rt-multi-thread"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
futures-util = "0.3.29"
sha2 = "0.10.8"
